--- a/TaskManager/templates/base.html
+++ b/TaskManager/templates/base.html
@@ -2,25 +2,28 @@
 {% load static %}
 
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Title</title>
-        <link rel="stylesheet" href="{% static 'projects/css/styles.css' %}">
-        <link rel="stylesheet" href="{% static 'notification/css/styles.css' %}">
-        <link rel="stylesheet" href="{% static 'tasks/css/styles.css' %}">
-        <link rel="stylesheet" href="{% static 'user/css/styles.css' %}">
 
-        <script src="{% static 'projects/js/index.js' %}"></script>
-        <script src="{% static 'notification/js/index.js' %}"></script>
-        <script src="{% static 'tasks/js/index.js' %}"></script>
-        <script src="{% static 'user/js/index.js' %}"></script>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Title</title>
+    <link rel="stylesheet" href="{% static 'projects/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'notification/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'tasks/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'user/css/styles.css' %}">
 
-    <body>
-        {% include 'navbar.html' %}
-{#        <h1 class="test">TEST STYLES</h1>#}
+    <script src="{% static 'projects/js/index.js' %}"></script>
+    <script src="{% static 'notification/js/index.js' %}"></script>
+    <script src="{% static 'tasks/js/index.js' %}"></script>
+    <script src="{% static 'user/js/index.js' %}"></script>
+</head>
 
-        {% block content %}
-        {% endblock %}
-    </body>
+<body>
+    {% include 'navbar.html' %}
+    {# <h1 class="test">TEST STYLES</h1>#}
+
+    {% block content %}
+    {% endblock %}
+</body>
+
 </html>
