--- a/TaskManager/templates/navbar.html
+++ b/TaskManager/templates/navbar.html
@@ -9,9 +9,10 @@
                 alt="Logo"
             />
         </a>
-        <a href="{% url 'app_projects:main' %}">
+        <a href="{% url 'app_projects:main' %}" class="navbar-title">
             <span>Task Manager</span>
         </a>
+
     </div>
     <nav class="navbar-menu">
         <a href="{% url 'app_projects:main' %}">Главная</a>
