--- a/TaskManager/projects/templates/projects/project_form.html
+++ b/TaskManager/projects/templates/projects/project_form.html
@@ -2,14 +2,16 @@
 {% load static %}
 
 {% block content %}
-	<h1>Форма для создания нового проекта</h1>
-    <form method="post" action="">
+<div class="projform-card">
+
+    <form method="post">
         {% csrf_token %}
         {% for field in form %}
-            {{ field.label }}
+            <label class="projform-label" for="{{ field.id_for_label }}">{{ field.label }}</label>
             {{ field }}
         {% endfor %}
         <button type="submit" class="save-btn">Сохранить</button>
     </form>
-
+</div>
 {% endblock %}
+
