--- a/TaskManager/tasks/templates/tasks/task_form.html
+++ b/TaskManager/tasks/templates/tasks/task_form.html
@@ -6,7 +6,7 @@
     <form method="post">
         {% csrf_token %}
         {% for field in form %}
-            {{ field.label }}
+            <label class="taskedit-label" for="{{ field.id_for_label }}">{{ field.label }}</label>
             {{ field }}
         {% endfor %}
         <button type="submit" class="save-btn">Сохранить</button>
