feat: add comment in projects list

--- a/TaskManager/projects/templates/projects/projects_list.html
+++ b/TaskManager/projects/templates/projects/projects_list.html
@@ -12,7 +12,7 @@
 
                 <p class="project-title"><strong>{{ project.title }}</strong></p>
                 <p class="project-description">{{ project.description }}</p>
-
+                <p>{{ project.comment }}</p>
                 <ul class="project-tasks">
                     {% for task in project.tasks.all %}
                     <li>{{ task.title }}</li>
