--- a/TaskManager/projects/static/projects/css/styles.css
+++ b/TaskManager/projects/static/projects/css/styles.css
@@ -31,14 +31,14 @@ h2 {
     display: flex;
     align-items: center;
     gap: 16px;
-    margin-left: 40px;
+    margin-left: 0px;
 }
 
 .navbar-logo-img,
 .profile {
     height: 47px;
     width: 47px;
-    margin-left: 40px;
+    margin-left: 0px;
 }
 
 .navbar-logo span {
@@ -490,13 +490,11 @@ h2 {
     padding: 15px 10px;
     border-radius: 50px;
     margin: 40px auto;
-    /* центрирует по горизонтали */
     font-weight: 600;
     font-family: Inter;
     font-size: 14px;
     cursor: pointer;
     display: block;
-    /* важно для margin auto */
 }
 
 .task-meta {
@@ -600,17 +598,26 @@ h2 {
     background-color: #d32f2f;
 }
 
+
 /* ФИЛЬТРАЦИЯ */
-.filters {
+.taskm-filters {
     padding: 20px 40px;
+    font-family: 'Inter', sans-serif;
+    max-width: 400px;
+    margin: 0 auto;
 }
 
-.filters h3 {
+.taskm-filters h3 {
+    margin-bottom: 15px;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.taskm-filters label {
+    display: block; /* чтобы каждый label шел в новой строке */
     margin-bottom: 10px;
-}
-
-.filters label {
-    margin-right: 20px;
+    font-size: 16px;
 }
 
 .taskedit-title,
@@ -627,7 +634,7 @@ h2 {
     box-sizing: border-box;
 }
 
-/* Заголовки полей (названия вроде "Комментарий", "Описание") */
+
 .taskedit-label {
     font-size: 18px;
     font-weight: 700;
@@ -803,7 +810,6 @@ h2 {
     justify-content: center;
     align-items: center;
     gap: 20px;
-    /* вот тут будет работать gap */
     margin-top: 20px;
 }
 
@@ -821,7 +827,7 @@ h2 {
 
 .taskm-page-btn {
     margin: 0 40px;
-    /* Добавляет отступы слева и справа у каждой кнопки */
+
 }
 
 .taskm-page-btn:hover {
@@ -1298,54 +1304,7 @@ h2 {
     background-color: #d73833;
 }
 
-@media (max-width: 768px) {
-    .navbar {
-        padding: 10px 15px;
-    }
-
-    .navbar-title {
-        display: none;
-    }
-
-    .navbar-logo-img {
-        width: 30px;
-        height: 30px;
-        margin-left: 0;
-    }
-
-    .navbar-menu {
-        gap: 15px;
-        margin-right: 0;
-    }
-
-    .navbar-menu a {
-        font-size: 16px;
-        padding: 4px;
-    }
-
-    .navbar-menu img {
-        max-height: 28px;
-    }
-}
 
 
-/* 📱 Адаптивность для экранов до 600px */
-@media (max-width: 600px) {
-    .profile-section {
-        margin: 40px 20px;
-        padding: 40px 20px;
-    }
 
-    .profile-title {
-        font-size: 24px;
-    }
 
-    .profile-info {
-        font-size: 16px;
-    }
-
-    .logout-btn {
-        font-size: 14px;
-        padding: 14px 30px;
-    }
-}
