--- a/TaskManager/projects/static/projects/css/styles.css
+++ b/TaskManager/projects/static/projects/css/styles.css
@@ -365,44 +365,74 @@ h2 {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 160px;
-    margin-top: 45px;
+    margin-top: 40px;
+    align-items: flex-start; 
+    align-items:center; 
 }
 
 .subtask-btn {
-    padding: 15px;
     border: 1px solid #f44336;
     background: white;
     border-radius: 6px;
     color: #f44336;
-    cursor: pointer;
-    font-weight: 500;
     font-size: 14px;
+    font-weight: 500;
+    font-family: Inter;
+    padding: 10px 12px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; 
+    max-width: 320px;
+    box-sizing: border-box;
+    margin:0 auto; 
+}
+.subtask-title {
+    flex-grow: 1;
+}
+.subtask-actions {
+    display: flex;
+    gap: 0px;
+}
+.pencil-btn,
+.trash-btn {
+    background: none;
+    border: none;
+    color: #f44336;
+    font-size: 16px;
+    cursor: pointer;
+    padding: 0;
+    line-height: 1;
+    display: inline-block;
+}
+.pencil-btn:hover,
+.trash-btn:hover {
+    color: #d32f2f;
 }
 
-.pencil-symbol {
-    font-size: 15px;
-    margin-left: 6px;
-    color: #f44336;
-    vertical-align: middle;
-}
-
-.trash-symbol {
-    font-size: 15px;
-    margin-left: 6px;
-    color: #f44336;
-    vertical-align: middle;
+.pencil-btn:hover,
+.trash-btn:hover {
+    color: #d32f2f;
 }
 
 .subtask-control-btn {
     background-color: #f44336;
     color: white;
+    margin:0 auto; 
     border: none;
-    padding: 15px;
-    border-radius: 6px;
+    padding: 10px 18px;
+    border-radius: 8px;
     font-size: 14px;
     cursor: pointer;
+    justify-content: center;
+    font-family: Inter;
+    font-weight: 600;
+    margin-top: 10px;
+    box-shadow: 0 2px 6px rgba(244, 67, 54, 0.3);
 }
+.subtask-control-btn:hover {
+    background-color: #d32f2f;
+}
+
 
 .task-info {
     display: flex;
@@ -506,6 +536,8 @@ h2 {
     margin-top: 45px;
     color: #333;
     font-family: Inter;
+    align-items:center;       
+    gap:18px;
 }
 
 .edit-btn {
@@ -598,6 +630,47 @@ h2 {
     background-color: #d32f2f;
 }
 
+.subtask-edit-card {
+    border: 1px solid #f44336;
+    border-radius: 10px;
+    padding: 40px;
+    margin: 40px auto;
+    width: 95%;
+    max-width: 500px;
+    background-color: #fff;
+    font-family: 'Inter', sans-serif;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.subtask-edit-field {
+    width: 100%;
+    margin-bottom: 24px;
+}
+
+
+.subtask-edit-label {
+    display: block;
+    font-size: 16px;
+    font-weight: 600;
+    color: #1a1a1a;
+    margin-bottom: 6px;
+    text-align: center;
+}
+
+
+.subtask-edit-card input[type="text"] {
+    width: 100%;
+    padding: 12px;
+    font-size: 14px;
+    border: 1px solid #f44336;
+    border-radius: 8px;
+    font-family: 'Inter', sans-serif;
+    box-sizing: border-box;
+}
 
 /* ФИЛЬТРАЦИЯ */
 .taskm-filters {
@@ -615,7 +688,8 @@ h2 {
 }
 
 .taskm-filters label {
-    display: block; /* чтобы каждый label шел в новой строке */
+    display: block;
+    /* чтобы каждый label шел в новой строке */
     margin-bottom: 10px;
     font-size: 16px;
 }
@@ -1111,7 +1185,8 @@ h2 {
 }
 
 /* Левая и правая части */
-.prform-left, .prform-right {
+.prform-left,
+.prform-right {
     flex: 1;
     min-width: 180px;
 }
@@ -1146,6 +1221,7 @@ h2 {
     font-family: 'Inter', sans-serif;
     box-sizing: border-box;
 }
+
 .prform-add-task {
     background-color: #f44336;
     color: white;
@@ -1158,7 +1234,7 @@ h2 {
     transition: background-color 0.2s ease;
     font-family: 'Inter', sans-serif;
     box-shadow: 0 2px 6px rgba(244, 67, 54, 0.3);
-    margin-top: 30px;
+    margin-top: 10px;
     display: inline-block;
     text-align: center;
 }
@@ -1179,6 +1255,7 @@ h2 {
     display: inline-block;
     text-align: center;
 }
+
 .prform-act-btn {
     background-color: #f44336;
     color: white;
@@ -1197,6 +1274,45 @@ h2 {
     text-align: center;
 }
 
+.prform-task-entry {
+    display: block;
+    margin-bottom: 16px;
+    max-width: 180px;
+    /* Больше отступа между кнопками */
+}
+
+.prform-task-btn {
+    width: 100%;
+    /* Растянуть на всю ширину колонки */
+    background-color: white;
+    border: 2px solid #f44336;
+    color: #f44336;
+    font-weight: bold;
+    padding: 8px 15px;
+    /* Чуть больше внутреннего отступа */
+    border-radius: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    font-family: 'Inter', sans-serif;
+    text-align: left;
+    /* Выравнивание текста внутри кнопки */
+}
+
+.prform-task-btn:hover {
+    background-color: #ffeaea;
+    border-color: #d32f2f;
+}
+
+.prform-task-btn span {
+    color: #f44336;
+}
+
+.prform-left {
+    margin-top: 40px;
+}
+
+
 /* Кнопки */
 
 .del-btn {
@@ -1213,6 +1329,7 @@ h2 {
     margin-top: 470px;
     margin-left: 55px;
 }
+
 .prform-status-badge {
     background-color: white;
     border: 1px solid #f44336;
@@ -1238,6 +1355,7 @@ h2 {
     text-align: center;
     cursor: pointer;
 }
+
 .prform-status-badge {
     background-color: white;
     border: 1px solid #f44336;
@@ -1247,11 +1365,84 @@ h2 {
     border-radius: 50px;
     display: inline-block;
     font-size: 14px;
-    margin: 20px auto 20px; 
+    margin: 20px auto 20px;
     margin-left: 115px;
     text-align: center;
 }
 
+/*БЛОК ДОБАВЛЕНИЯ УЧАСТНИКА */
+.projform-card {
+    border: 1px solid #f44336;
+    border-radius: 10px;
+    padding: 40px;
+    margin: 30px auto;
+    width: 95%;
+    max-width: 800px;
+    font-family: 'Inter', sans-serif;
+    box-sizing: border-box;
+    background-color: #fff;
+}
+
+.projform-fields {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px 40px;
+    margin-bottom: 30px;
+}
+
+.projform-field {
+    display: flex;
+    flex-direction: column;
+    min-width: 250px;
+}
+
+.projform-label {
+    font-weight: 600;
+    font-size: 16px;
+    margin-bottom: 8px;
+    color: #1a1a1a;
+}
+
+.projform-card select,
+.projform-card input,
+.projform-card textarea {
+    padding: 10px 14px;
+    border-radius: 10px;
+    border: 1px solid #f44336;
+    font-size: 14px;
+    font-family: 'Inter', sans-serif;
+    box-sizing: border-box;
+}
+
+.projform-error {
+    margin-top: 5px;
+    color: #f44336;
+    font-size: 12px;
+}
+
+.projform-submit-container {
+    display: flex;
+    justify-content: center;
+}
+
+.save-btn {
+    background-color: #f44336;
+    color: white;
+    border: none;
+    padding: 14px 40px;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+    font-family: 'Inter', sans-serif;
+    box-shadow: 0 2px 6px rgba(244, 67, 54, 0.3);
+}
+
+.save-btn:hover {
+    background-color: #d32f2f;
+}
 
 /*БЛОК ПРОФИЛЯ */
 .profile-section {
@@ -1304,7 +1495,413 @@ h2 {
     background-color: #d73833;
 }
 
+/*АДАПТИВНОСТЬ */
+@media (max-width: 600px) {
+    .navbar {
+        padding: 10px 15px;
+    }
+
+    .navbar-title {
+        display: none;
+    }
+
+    .navbar-logo-img {
+        width: 25px;
+        height: 25px;
+        margin-left: 0;
+        margin-left: 10px;
+    }
+
+    .navbar-menu {
+        gap: 15px;
+        margin-right: 0;
+    }
+
+    .navbar-menu a {
+        font-size: 16px;
+        padding: 4px;
+    }
+
+    .navbar-menu img {
+        max-height: 18px;
+    }
+
+    .profile-section {
+        margin: 30px;
+        padding: 30px 15px;
+    }
+
+    .profile-title {
+        font-size: 24px;
+    }
+
+    .profile-info {
+        font-size: 16px;
+    }
+
+    .logout-btn {
+        font-size: 14px;
+        padding: 14px 30px;
+    }
+
+    .features-section {
+        flex-direction: column;
+        padding: 20px;
+        align-items: center;
+    }
+
+    .features-text {
+        margin: 0;
+        gap: 20px;
+        max-width: 100%;
+        align-items: center;
+    }
+
+    .features-text h2 {
+        font-size: 20px;
+        text-align: center;
+        margin: 0;
+    }
+
+    .features-list {
+        gap: 15px;
+        padding-left: 0;
+        font-size: 18px;
+    }
+
+    .features-list li {
+        padding-left: 24px;
+        font-size: 18px;
+    }
+
+    .features-buttons {
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+        margin: 0;
+    }
+
+    .btn-primary {
+        padding: 14px 24px;
+        width: 100%;
+        max-width: 300px;
+        font-size: 16px;
+        text-align: center;
+    }
+
+    .feat-img {
+        display: none;
+    }
+}
+/*ПРОЕКТ ФОРМА */
+@media (max-width: 600px) {
+    .projform-card {
+        padding: 20px 15px;
+        margin: 20px 10px;
+    }
+
+    .projform-label {
+        font-size: 16px;
+    }
+
+    .projform-input,
+    .projform-textarea,
+    .projform-select {
+        font-size: 14px;
+        padding: 10px 12px;
+    }
+
+    .projform-heading {
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+}
+@media (max-width: 600px) {
+    .task-card {
+        padding: 20px 15px;
+        margin: 20px 10px;
+    }
+
+    .taskedit-label {
+        font-size: 16px;
+        margin-bottom: 8px;
+    }
+
+    .task-card input,
+    .task-card textarea,
+    .task-card select {
+        font-size: 14px;
+        padding: 10px 12px;
+        margin-bottom: 20px;
+    }
+
+    .save-btn {
+        font-size: 14px;
+        padding: 12px 24px;
+    }
+}
+/*ФИЛЬТРЫ*/
+@media (max-width: 600px) {
+    .taskm-filters {
+        padding: 20px 20px;
+    }
+
+    .taskm-filters label {
+        font-size: 14px;
+    }
+}
+@media (max-width: 600px) {
+    .notif-title {
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+
+    .notification-box {
+        padding: 15px 20px;
+        font-size: 14px;
+        max-width: 90%; /* уже на экране */
+    }
+}
+
+  /*регистрация*/
+@media (max-width: 768px) {
+    .auth-section {
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+    }
+
+    .auth-image {
+        display: none;
+    }
+
+    .auth-form {
+        margin-right: 0;
+        max-width: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center; /* центрирует всё внутри формы */
+    }
+
+    .auth-form form {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .auth-form button {
+        align-self: center;
+        width: 80%; 
+    }
+
+    .auth-form .register-row {
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 5px;
+        margin-top: 40px;
+    }
+
+    .auth-form a {
+        margin-left: 0;
+        margin-top: 0;
+    }
+    .nowrap {
+    white-space: nowrap;
+    }
+
+}
+
+  /* просмотр задач */
+@media screen and (max-width: 600px) {
+  .task-card {
+    padding: 20px 16px;
+    margin: 20px 10px;
+    width: calc(100% - 20px);
+  }
+
+  .task-info,
+  .task-meta {
+    width: 100%;
+    align-items: center;
+  }
+
+  .task-title {
+    width: 80%;
+    font-size: 20px;
+  }
+
+  .task-textarea {
+    width: 90%;
+  }
+
+  .status-btn {
+    width: 100%;
+  }
+
+  .save-btn {
+    width: 100%;
+    margin: 10px auto 10px auto; 
+  }
+
+  .subtask-control-btn {
+    width: fit-content;
+    margin: 5px auto 5px auto; 
+  }
+
+  .delete-btn {
+    width: 100%;
+    margin: 10px auto 0 auto; 
+    text-align: center;
+  }
+
+  .back-btn-container {
+    display: flex;
+    justify-content: center;
+    margin-left: 50px;
+  }
+
+  .back-btn {
+    margin: 0 auto;
+  }
+
+  .subtasks {
+    align-items: center;
+    gap: 8px; 
+  }
+
+  .subtask-btn {
+    width: 100%;
+    max-width: 320px;
+  }
+}
+/* ЛИСТ ЗАДАЧ */
+@media screen and (max-width: 600px) {
+  .taskm-container {
+    gap: 24px;
+    padding: 0 16px 20px;
+  }
+
+  .taskm-card {
+    width: 85vw;
+    min-width: 85vw;
+    padding: 28px 20px;
+    min-height: 300px;
+    box-sizing: border-box;
+  }
+
+  .taskm-title {
+    font-size: 22px;
+    margin-bottom: 12px;
+  }
+
+  .taskm-subtask-btn {
+    padding: 14px 24px;
+    font-size: 14px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+  }
+
+  .taskm-meta {
+    font-size: 14px;
+    margin: 6px 0;
+  }
+
+  .taskm-status {
+    padding: 12px 18px;
+    font-size: 14px;
+    margin-top: 14px;
+  }
+
+  .taskm-page-btn {
+    width: 32px;
+    height: 32px;
+    font-size: 18px;
+    margin: 0 10px;
+  }
+}
+/* проект просмотр */
+@media screen and (max-width: 600px) {
+  .prform-form {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    align-items: center;
+  }
+
+  .prform-left,
+  .prform-center,
+  .prform-right {
+    width: 100%;
+    max-width: 100%;
+    min-width: 0;
+  }
+
+  .prform-left {
+    order: 3;
+    margin-top: 20px;
+  }
+
+  .prform-task-entry {
+    width: 100%;
+    max-width: 100%;
+    padding: 0 10px;
+    box-sizing: border-box;
+  }
+
+  .prform-task-btn {
+    width: 100%;
+    text-align: center;
+    box-sizing: border-box;
+  }
+
+  .prform-add-task {
+    display: block;
+    width: 50%;
+    max-width: 320px;
+    text-align: center;
+    margin: 20px auto 0 auto;
+  }
+
+  .prform-status-badge {
+    margin: 20px auto;
+    display: block;
+    text-align: center;
+  }
+
+  .save-btn,
+  .del-btn,
+  .prform-action-btn {
+    width: 100%;
+    max-width: 220px;
+    margin: 20px auto 0 auto;
+    display: block;
+    text-align: center;
+  }
+
+.back-btn-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.prform-back-btn {
+  margin: 0 auto;
+  display: block;
+  max-width: 200px;
+  width: 100%;
+  text-align: center;
+  margin-left: 20px;
+}
 
 
+  .prform-members {
+    padding: 0 20px;
+    font-size: 15px;
+  }
 
-
+  .prform-label {
+    text-align: center;
+  }
+}
