--- a/TaskManager/projects/templates/projects/add_members.html
+++ b/TaskManager/projects/templates/projects/add_members.html
@@ -3,11 +3,21 @@
 
 {% block content %}
     <form method="post" action="" class="projform-card">
-    {% csrf_token %}
-    {% for field in form %}
-    	{{ field.label }}
-        {{ field }}
-    {% endfor %}
-    <button type="submit" class="save-btn">Сохранить</button>
+        {% csrf_token %}
+        <div class="projform-fields">
+            {% for field in form %}
+                <div class="projform-field">
+                    <label for="{{ field.id_for_label }}" class="projform-label">{{ field.label }}</label>
+                    {{ field }}
+                    {% if field.errors %}
+                        <div class="projform-error">{{ field.errors }}</div>
+                    {% endif %}
+                </div>
+            {% endfor %}
+        </div>
+
+        <div class="projform-submit-container">
+            <button type="submit" class="save-btn">Сохранить</button>
+        </div>
     </form>
 {% endblock %}
