--- a/TaskManager/projects/templates/projects/project.html
+++ b/TaskManager/projects/templates/projects/project.html
@@ -6,12 +6,14 @@
     <div class="prform-form">
         <!-- Левая колонка: задачи -->
         <div class="prform-left">
+            <!-- Кнопки задач -->
             {% for task in tasks %}
-                <a class="prform-task-btn" href="{% url 'app_tasks:task_view' task.slug %}"><button>{{ task.title }}</button></a><br>
-{#                <button class="prform-task-btn">#}
-{#                    {{ task.title }} <span class="edit-symbol">✎</span>#}
-{#                </button>#}
+                <a class="prform-task-entry" href="{% url 'app_tasks:task_view' task.slug %}">
+                    <button class="prform-task-btn"><span>{{ task.title }}</span></button>
+                </a><br>
             {% endfor %}
+
+            <!-- Кнопка добавления задачи -->
             <a href="{% url 'app_tasks:task_create' %}?project={{ project.slug }}" class="prform-add-task">Добавить задачи</a>
         </div>
 
@@ -57,7 +59,6 @@
                     {% empty %}
                         <li>Нет участников</li>
                     {% endfor %}
-
                 </ul>
             </div>
 
